tests/miniJava/neg/004930_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java , return int [] java ) { return 0 ; } }
